--- a/desafio-frontend2/desafio.html
+++ b/desafio-frontend2/desafio.html
@@ -45,6 +45,9 @@
 				</div>
 			</div>
 		</div>
+		<div id="msgNotFound" class="alert alert-danger" role="alert">
+				Não foi encontrado nenhum usuário com esse nome
+		</div>
 	</div>
 		
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
