adding enter keypress handle event

--- a/desafio-frontend2/desafio.html
+++ b/desafio-frontend2/desafio.html
@@ -11,9 +11,9 @@
 	<div class="content">
 
 		<div id="searchBar" class="input-group input-group-custom">
-			<input type="text" class="form-control" placeholder="Procure um usuário...">
+			<input id="searchInput" type="text" class="form-control" placeholder="Procure um usuário...">
 			<span class="input-group-btn">
-				<button class="btn btn-secondary" type="button" onclick="search()">Buscar</button>
+				<button id="searchBtn" class="btn btn-secondary" type="button" onclick="search()">Buscar</button>
 			</span>
 		</div>
 		<div id="userInfo" class="center">
