starting code to handle get repos event. Adding html repos page

--- a/desafio-frontend2/index.html
+++ b/desafio-frontend2/index.html
@@ -27,7 +27,7 @@
 				<div id="userEmail" class="info"></div>
 				<div id="userBio" class="info"></div>
 				<div class="actions">
-					<button class="btn">Repositories</button>
+					<button type="button" onclick="callReposPage()" class="btn">Repositories</button>
 				</div>
 			</div>
 			<div class="stats">
