--- a/desafio-frontend2/repos.html
+++ b/desafio-frontend2/repos.html
@@ -5,18 +5,26 @@
     <meta charset="utf-8">
     <title>Desafio Front-End</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="repos.css">
 </head>
 <body onload="getReposFromUser()">
-        <h4></h4>
-        <table class="rectangle-list">
-            <tr>
-                <td>
-                <ol id="reposList">
-                </ol>
-                </td>
-            </tr>
-        </table>
+        <div class="content">
+            <h2 id="username"></h2>
+            <div class="checkbox">
+                <input id="checkOrder" type="checkbox" onclick="toggleListOrder()">
+                <span>Ordem decrescente</span>
+            </div>
+            
+            <table class="rectangle-list">
+                <tr>
+                    <td>
+                        <ol id="reposList">
+                        </ol>
+                    </td>
+                </tr>
+            </table>
+        </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type = "text/javascript" src="scripts.js"></script>
