--- a/desafio-frontend2/repos.html
+++ b/desafio-frontend2/repos.html
@@ -15,6 +15,16 @@
                 <input id="checkOrder" type="checkbox" onclick="toggleListOrder()">
                 <span>Ordem decrescente</span>
             </div>
+            <div class="accordion">
+                <div class="accordion-section">
+                </div>
+            </div>
+
+            <!-- <h2 id="username"></h2>
+            <div class="checkbox">
+                <input id="checkOrder" type="checkbox" onclick="toggleListOrder()">
+                <span>Ordem decrescente</span>
+            </div>
             
             <table class="rectangle-list">
                 <tr>
@@ -23,7 +33,7 @@
                         </ol>
                     </td>
                 </tr>
-            </table>
+            </table> -->
         </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
