--- a/desafio-frontend2/repos.html
+++ b/desafio-frontend2/repos.html
@@ -13,7 +13,7 @@
             <h2 id="username"></h2>
             <div class="checkbox">
                 <input id="checkOrder" type="checkbox" onclick="toggleListOrder()">
-                <span>Ordem decrescente</span>
+                <span>Ordem crescente</span>
             </div>
             <div class="accordion">
                 <div class="accordion-section">
